--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
   margin: 0;
   font-family: "Inter", sans-serif;
   overflow-x: hidden;
+  color: #292929;
 }
 
 section, footer {
@@ -17,16 +18,15 @@ section, footer {
 }
 
 .header {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   height: 100vh;
   padding: 64px 120px;
   background-image: url("../img/header-bg.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .header__top {
   display: flex;
@@ -34,12 +34,20 @@ section, footer {
   justify-content: space-between;
 }
 .header-title {
-  color: #292929;
+  margin-top: 40px;
+  margin-bottom: 0;
   font-family: Inter;
   font-size: 48px;
   font-weight: 800;
+  font-style: italic;
   line-height: 100%;
   letter-spacing: -1.5px;
+}
+
+.container {
+  max-width: 1260px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .burger {
@@ -51,7 +59,7 @@ section, footer {
 }
 
 .menu {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -72,8 +80,8 @@ section, footer {
   margin-bottom: 32px;
 }
 .menu__item-link {
+  color: inherit;
   text-decoration: none;
-  color: #292929;
   font-family: Inter;
   font-size: 22px;
   font-style: normal;
@@ -92,7 +100,8 @@ section, footer {
 }
 
 .section-title {
-  color: #292929;
+  margin-top: 120px;
+  margin-bottom: 64px;
   text-align: center;
   font-family: Inter;
   font-size: 48px;
@@ -100,4 +109,56 @@ section, footer {
   font-weight: 700;
   line-height: 48px;
   letter-spacing: -1.5px;
+}
+
+.how-to-buy {
+  text-align: left;
+}
+
+.main {
+  padding: 120px;
+}
+
+.product {
+  flex-basis: 324px;
+}
+.product__cards {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.product__photo {
+  width: 100%;
+}
+.product__title {
+  margin-bottom: 8px;
+  text-align: center;
+  font-family: Inter;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 48px;
+  letter-spacing: -1.5px;
+  font-size: 16px;
+  line-height: 140%;
+  text-align: left;
+  letter-spacing: normal;
+}
+.product__category {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+  letter-spacing: normal;
+  margin-top: 0;
+  margin-bottom: 12px;
+}
+.product__price {
+  margin: 0;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%;
+  letter-spacing: normal;
+  font-weight: 700;
 }/*# sourceMappingURL=style.css.map */
