--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,13 +6,13 @@ body
   margin: 0
   font-family: 'Inter', sans-serif
   overflow-x: hidden
+  color: #292929
 section, footer
   margin-top: 120px
 =position 
   height: 100vh
   padding: 64px 120px
 =menu-text 
-  color: #292929
   font-family: Inter
   font-size: 22px
   font-style: normal
@@ -21,14 +21,13 @@ section, footer
   letter-spacing: 2px
   text-transform: uppercase
 =main-title
-  color: #292929
   font-family: Inter
   font-size: 48px
   font-weight: 800
+  font-style: italic
   line-height: 100%
   letter-spacing: -1.5px
 =section-title 
-  color: #292929
   text-align: center
   font-family: Inter
   font-size: 48px
@@ -36,28 +35,40 @@ section, footer
   font-weight: 700
   line-height: 48px
   letter-spacing: -1.5px
+=product-text
+  font-size: 16px
+  font-style: normal
+  font-weight: 400
+  line-height: 140%
+  letter-spacing: normal
 .header
-  display: flex
-  flex-direction: column
-  justify-content: space-between
   +position 
   background-image: url("../img/header-bg.jpg") 
   background-repeat: no-repeat
   background-position: center 
   background-size: cover 
-  position: relative
+  display: flex
+  flex-direction: column
+  justify-content: space-between
   &__top  
     display: flex
     align-items: center
     justify-content: space-between  
   &-title 
+    margin-top: 40px
+    margin-bottom: 0
     +main-title 
+.container 
+  max-width: 1260px
+  width: 100%
+  margin: 0 auto
+  
 .burger
   cursor: pointer
 .close
   cursor: pointer
 .menu
-  position: absolute
+  position: fixed 
   top: 0
   left: 0
   right: 0
@@ -73,6 +84,7 @@ section, footer
     &:not(:last-child)
       margin-bottom: 32px
     &-link 
+      color: inherit 
       text-decoration: none
       +menu-text 
 .menu.active
@@ -81,4 +93,35 @@ section, footer
    margin-top: 64px
 .section 
   &-title 
+    margin-top: 120px
+    margin-bottom: 64px
     +section-title 
+.how-to-buy
+  text-align: left
+.main
+  padding: 120px
+.product
+  flex-basis: 324px
+  &__cards
+    display: flex
+    justify-content: center
+    gap: 24px
+  &__photo
+    width: 100%
+  &__title
+    margin-bottom: 8px
+    +section-title 
+    font-size: 16px
+    line-height: 140%
+    text-align: left
+    letter-spacing: normal
+  &__category
+    +product-text 
+    margin-top: 0
+    margin-bottom: 12px
+  &__price
+    margin: 0
+    +product-text 
+    font-weight: 700
+
+
