--- a/sass/style.sass
+++ b/sass/style.sass
@@ -125,3 +125,10 @@ section, footer
     font-weight: 700
 
 
+
+.footer
+  background-image: url("../img/footer-bg.jpg") 
+  background-repeat: no-repeat
+  background-position: center 
+  background-size: cover 
+  min-height: 460px
