added media for footer

--- a/css/style.css
+++ b/css/style.css
@@ -225,4 +225,10 @@ section {
   background-position: center;
   background-size: cover;
   min-height: 460px;
+}
+
+@media (min-width: 1200px) {
+  .footer {
+    height: 640px;
+  }
 }/*# sourceMappingURL=style.css.map */
