--- a/sass/style.sass
+++ b/sass/style.sass
@@ -166,3 +166,8 @@ section
   background-position: center 
   background-size: cover 
   min-height: 460px
+
+@media (min-width: 1200px) 
+  .footer
+    height: 640px
+  
