added hover effect

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,54 @@ section {
 }
 
 .burger {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 24px;
+  position: relative;
   cursor: pointer;
+}
+
+.first-line {
+  padding: 2px;
+  position: absolute;
+  background: #292929;
+  width: 24px;
+  border-radius: 2px;
+  cursor: pointer;
+  left: 0;
+  bottom: 3px;
+  transition: width 0.5s;
+}
+
+.middle-line {
+  padding: 2px;
+  position: absolute;
+  background: #292929;
+  width: 24px;
+  border-radius: 2px;
+  cursor: pointer;
+  left: 0;
+}
+
+.threes-line {
+  padding: 2px;
+  position: absolute;
+  background: #292929;
+  width: 24px;
+  border-radius: 2px;
+  cursor: pointer;
+  left: 0;
+  top: 7px;
+  transition: width 0.5s;
+}
+
+.burger:hover .first-line {
+  width: 18px;
+}
+
+.burger:hover .threes-line {
+  width: 10px;
 }
 
 .close {
