--- a/sass/style.sass
+++ b/sass/style.sass
@@ -63,40 +63,48 @@ section
   flex-direction: column
   justify-content: space-between
   width: 24px
+  height: 24px
+  background-image: url("../img/icons/icon-burger-menu.png") 
+  background-repeat: no-repeat
+  background-position: center 
+  background-size: cover 
   position: relative
   cursor: pointer
-.first-line
-  padding: 2px
-  position: absolute
-  background: #292929
-  width: 24px
-  border-radius: 2px
-  cursor: pointer
-  left: 0
-  bottom: 3px
-  transition: width 0.5s
-.middle-line
-  padding: 2px
-  position: absolute
-  background: #292929
-  width: 24px
-  border-radius: 2px
-  cursor: pointer
-  left: 0
-.threes-line
-  padding: 2px
-  position: absolute
-  background: #292929
-  width: 24px
-  border-radius: 2px
-  cursor: pointer
-  left: 0
-  top: 7px
-  transition: width 0.5s
-.burger:hover .first-line
-  width: 18px
-.burger:hover .threes-line
-  width: 10px
+  transition: background 0.5s
+  &:hover 
+    background-image: url("../img/icons/icon-burger-menu-hover.png")
+// .first-line
+//   padding: 2px
+//   position: absolute
+//   background: #292929
+//   width: 24px
+//   border-radius: 2px
+//   cursor: pointer
+//   left: 0
+//   bottom: 3px
+//   transition: width 0.5s
+// .middle-line
+//   padding: 2px
+//   position: absolute
+//   background: #292929
+//   width: 24px
+//   border-radius: 2px
+//   cursor: pointer
+//   left: 0
+// .threes-line
+//   padding: 2px
+//   position: absolute
+//   background: #292929
+//   width: 24px
+//   border-radius: 2px
+//   cursor: pointer
+//   left: 0
+//   top: 7px
+//   transition: width 0.5s
+// .burger:hover .first-line
+//   width: 18px
+// .burger:hover .threes-line
+//   width: 10px
 .close
   cursor: pointer
 .menu
@@ -119,6 +127,8 @@ section
       color: inherit 
       text-decoration: none
       +menu-text 
+      &:hover 
+        text-decoration: underline
 .menu.active
   transform: translateX(0)
 .navbar
